# gn_study

document/: 84.gn_builtin_variables.md
document/01.gn_language/: 00.gn language.md  01.gn_variables.md  02.gn_strings.md  03.gn_lists.md  04.gn_conditionals.md  05.gn_functions.md  06.gn_scoping_execution.md  07.gn_file_directory_names.md  08.gn_labels.md  09.gn_build_flow.md  10.gn_build_arguments.md  11.gn_target_defaults.md  12.gn_targets.md  13.gn_configs.md  14.gn_toolchains.md  15.gn_toolchains_build_config.md  16.gn_templates.md  17.gn_imports.md  18.gn_path_processing.md  19.gn_patterns.md  20.gn_executing_scripts.md
document/02.command/: 21.gn_analyze.md  22.gn_args_command.md  23.gn_check_command.md  24.gn_clean_command.md  25.gn_clean_stale_command.md  26.gn_desc_command.md  27.gn_format_command.md  28.gn_gen_command.md  29.gn_help_command.md  30.gn_ls_command.md  31.gn_meta_command.md  32.gn_outputs_variable.md  33.gn_path_command.md  34.gn_refs_command.md
document/03.target/: 35.gn_action_target.md  36.gn_action_foreach_target.md  37.gn_bundle_data_target.md  38.gn_copy_target.md  39.gn_create_bundle_target.md  40.gn_executable_target.md  41.gn_generated_file_target.md  42.gn_group_target.md  43.gn_loadable_module_target.md  44.gn_rust_library_target.md  45.gn_rust_proc_macro_target.md  46.gn_shared_library_target.md  47.gn_source_set_target.md  48.gn_static_library_target.md  49.gn_target_function.md
document/04.function/: 50.gn_assert_function.md  (+33 more)
ex1_exec_script/: BUILD.gn  version.py
my_project/: .gn  BUILD.gn  main.cc  print.cc  rebase_path.gni
